# oliphaunt

./: .gitattributes  .gitignore  .gitmodules  .lychee.toml  .markdownlint-cli2.jsonc  .prototools  .release-please-manifest.json  .typos.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Package.swift  README.md  THIRD_PARTY_NOTICES.md  biome.json  clippy.toml  deny.toml  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  release-please-config.json  release-plz.toml  renovate.json  rust-toolchain.toml
.config/: nextest.toml
examples/electron-wasix/src-wasix/: Cargo.toml
examples/electron-wasix/src-wasix/src/: main.rs
examples/tauri-wasix/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-wasix/src-tauri/src/: lib.rs  main.rs
examples/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/tauri/src-tauri/src/: lib.rs  main.rs
src/: lib.rs
src/bindings/wasix-rust/crates/oliphaunt-wasix/: .release-semantic-inputs.json  CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
src/bindings/wasix-rust/crates/oliphaunt-wasix/src/: lib.rs
src/bindings/wasix-rust/crates/oliphaunt-wasix/src/oliphaunt/: aot.rs  assets.rs  backend.rs  base.rs  builder.rs  client.rs  config.rs  data_dir.rs  engine.rs  errors.rs  extensions.rs  generated_extensions.rs  interface.rs  mod.rs  parse.rs  pg_dump.rs  postgres_mod.rs  proxy.rs  server.rs  templating.rs  transport.rs  types.rs  wire.rs
src/bindings/wasix-rust/crates/oliphaunt-wasix/src/protocol/: mod.rs  shared_fixture_tests.rs  types.rs
src/bindings/wasix-rust/crates/oliphaunt-wasix/src/testdata/: wasix-toolchain.toml
src/bindings/wasix-rust/crates/oliphaunt-wasix/tests/: cli_smoke.rs  client_compat.rs  extensions_smoke.rs  performance_smoke.rs  postgres_regression.rs  proxy_smoke.rs  runtime_smoke.rs
src/bindings/wasix-rust/crates/oliphaunt-wasix/tests/support/: mod.rs
src/bindings/wasix-rust/examples/tauri-sqlx-vanilla/src-tauri/: Cargo.toml  tauri.conf.json
src/bindings/wasix-rust/examples/tauri-sqlx-vanilla/src-tauri/src/: bench.rs  lib.rs
src/runtimes/broker/: .release-semantic-inputs.json  CHANGELOG.md  Cargo.toml  README.md  dependency-licenses.json  moon.yml  release.toml
src/runtimes/broker/crates/linux-arm64-gnu/: Cargo.toml  README.md  build.rs
src/runtimes/broker/crates/linux-arm64-gnu/src/: lib.rs
src/runtimes/broker/crates/linux-x64-gnu/: Cargo.toml  README.md  build.rs
src/runtimes/broker/crates/linux-x64-gnu/src/: lib.rs
src/runtimes/broker/crates/macos-arm64/: Cargo.toml  README.md  build.rs
src/runtimes/broker/crates/macos-arm64/src/: lib.rs
src/runtimes/broker/crates/windows-x64-msvc/: Cargo.toml  README.md  build.rs
src/runtimes/broker/crates/windows-x64-msvc/src/: lib.rs
src/runtimes/broker/src/: main.rs
src/runtimes/broker/targets/: checksums.toml  linux-arm64-gnu.toml  linux-x64-gnu.toml  macos-arm64.toml  windows-x64-msvc.toml
src/runtimes/broker/tools/: check-package.sh
src/runtimes/liboliphaunt/icu/: Cargo.toml  README.md  build.rs
src/runtimes/liboliphaunt/icu/src/: lib.rs
src/runtimes/liboliphaunt/native/crates/tools/: Cargo.toml  README.md  build.rs
src/runtimes/liboliphaunt/native/crates/tools/src/: lib.rs
src/runtimes/liboliphaunt/wasix/crates/aot/aarch64-apple-darwin/: Cargo.toml  README.md
src/runtimes/liboliphaunt/wasix/crates/aot/aarch64-unknown-linux-gnu/: Cargo.toml  README.md
src/runtimes/liboliphaunt/wasix/crates/aot/x86_64-unknown-linux-gnu/: Cargo.toml  README.md  build.rs
src/runtimes/liboliphaunt/wasix/crates/assets/: Cargo.toml  README.md  build.rs
src/runtimes/liboliphaunt/wasix/crates/assets/src/: lib.rs
src/runtimes/liboliphaunt/wasix/crates/tools/: Cargo.toml  README.md  build.rs
src/runtimes/liboliphaunt/wasix/crates/tools-aot/aarch64-apple-darwin/: Cargo.toml  README.md
src/runtimes/liboliphaunt/wasix/crates/tools-aot/x86_64-pc-windows-msvc/: Cargo.toml  README.md  build.rs
src/runtimes/liboliphaunt/wasix/crates/tools-aot/x86_64-unknown-linux-gnu/: Cargo.toml  README.md
src/runtimes/liboliphaunt/wasix/crates/tools/src/: lib.rs
src/sdks/kotlin/oliphaunt/src/androidMain/cpp/: CMakeLists.txt  oliphaunt_android_bridge.cpp
src/sdks/rust/: .release-semantic-inputs.json  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  extension-artifact-archive-policy.properties  moon.yml  release.toml
src/sdks/rust/crates/oliphaunt-build/: Cargo.toml  README.md
src/sdks/rust/crates/oliphaunt-build/src/: lib.rs
src/sdks/rust/src/: backup.rs  broker.rs  build_resources.rs  builder.rs  config.rs  database.rs  engine.rs  error.rs  executor.rs  extension.rs  ipc.rs  lib.rs  lifecycle.rs  performance.rs  pgwire.rs  protocol.rs  query.rs  reply.rs  runtime_resources.rs  server.rs  storage.rs
src/sdks/rust/src/liboliphaunt/: ffi.rs  mod.rs  root.rs
src/sdks/rust/src/liboliphaunt/root/: extensions.rs  files.rs  fingerprint.rs  manifest.rs  runtime.rs  template.rs
src/sdks/rust/src/runtime_resources/: extension_artifact.rs  extension_index.rs  manifest.rs  package.rs  static_registry.rs
src/sdks/rust/tests/: native_extensions.rs  native_root_locking.rs  native_sql_regression.rs  protocol_parser_fuzz.rs  protocol_query_fixtures.rs  sdk_config_modes.rs  sdk_extensions.rs  sdk_native_smoke.rs  sdk_shape.rs
src/sdks/rust/tests/release-consumer/: Cargo.toml
src/sdks/rust/tests/release-consumer/src/: main.rs
src/sdks/rust/tools/: cargo-artifact-patches.mjs  check-release-consumer.sh  check-sdk.sh
tools/perf/runner/: Cargo.toml
tools/perf/runner/src/: benchmarks.rs  diagnostics.rs  legacy_wasix.rs  main.rs  native_liboliphaunt.rs  native_postgres.rs  prepared_updates.rs  process_rss.rs  report.rs  shared.rs  sqlite.rs
tools/xtask/: Cargo.toml  moon.yml
tools/xtask/src/: aot_serializer.rs  asset_checks.rs  asset_fingerprint.rs  asset_io.rs  asset_manifest.rs  asset_pipeline.rs  extension_catalog.rs  fs_utils.rs  main.rs  postgres_guard.rs  release_workspace.rs  source_spine.rs  template_runner.rs
xtask/: Cargo.toml
xtask/src/: extension_catalog.rs  main.rs
(+1545 files in other folders)
