[workspace]
members = [
  "src/bindings/wasix-rust/crates/oliphaunt-wasix",
  "src/sdks/rust/crates/oliphaunt-build",
  "src/sdks/rust",
  "src/runtimes/liboliphaunt/native/crates/tools",
  "src/runtimes/broker",
  "src/runtimes/liboliphaunt/icu",
  "src/runtimes/liboliphaunt/wasix/crates/assets",
  "src/runtimes/liboliphaunt/wasix/crates/tools",
  "src/runtimes/liboliphaunt/wasix/crates/aot/aarch64-apple-darwin",
  "src/runtimes/liboliphaunt/wasix/crates/aot/x86_64-unknown-linux-gnu",
  "src/runtimes/liboliphaunt/wasix/crates/aot/aarch64-unknown-linux-gnu",
  "src/runtimes/liboliphaunt/wasix/crates/aot/x86_64-pc-windows-msvc",
  "src/runtimes/liboliphaunt/wasix/crates/tools-aot/aarch64-apple-darwin",
  "src/runtimes/liboliphaunt/wasix/crates/tools-aot/x86_64-unknown-linux-gnu",
  "src/runtimes/liboliphaunt/wasix/crates/tools-aot/aarch64-unknown-linux-gnu",
  "src/runtimes/liboliphaunt/wasix/crates/tools-aot/x86_64-pc-windows-msvc",
  "tools/perf/runner",
  "tools/native-extension-proof",
  "tools/xtask",
]
exclude = ["src/bindings/wasix-rust/examples/tauri-sqlx-vanilla/src-tauri"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"
repository = "https://github.com/f0rr0/oliphaunt"
homepage = "https://oliphaunt.dev"
license = "MIT"

[profile.release]
strip = "symbols"
