[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.92"
publish = false

[dependencies]
anyhow = "1"
directories = "6"
pglite-oxide = { path = "..", features = ["extensions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "runtime-tokio",
] }
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-postgres = "0.7"
toml = "0.9"
walkdir = "2"
wasmparser = "0.247.0"
zstd = "0.13"
