[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
license.workspace = true
publish = false

[features]
default = []
wasix-runner = ["dep:wasmer", "dep:wasmer-wasix", "dep:webc"]
template-runner = [
  "wasix-runner",
  "wasmer/llvm",
  "wasmer-wasix/host-fs",
  "dep:tokio",
]
aot-serializer = [
  "template-runner",
  "wasmer/wasmer-artifact-create",
  "dep:wasmer-types",
]

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
toml = "0.9"
walkdir = "2"
wasmer = { version = "7.2.0-alpha.3", default-features = false, features = [
  "sys",
], optional = true }
wasmer-types = { version = "7.2.0-alpha.3", optional = true }
wasmer-wasix = { version = "0.702.0-alpha.3", default-features = false, features = [
  "sys-minimal",
  "sys-poll",
  "sys-thread",
  "time",
], optional = true }
wasmparser = "0.250.0"
webc = { version = "=12.0.0", optional = true }
zstd = "0.13"
