[package]
name = "oliphaunt-electron-wasix-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
anyhow = "1"
oliphaunt-wasix = { version = "=0.1.0", registry = "oliphaunt-local", features = [
  "extension-hstore",
  "extension-pg-trgm",
  "extension-unaccent",
] }
serde_json = "1"
