[package]
name = "oliphaunt-electron-wasix-sidecar"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
anyhow = "1"
oliphaunt-wasix = { version = "=0.0.0", registry = "oliphaunt-local", features = [
  "tools",
  "extension-hstore",
  "extension-pg-trgm",
  "extension-unaccent",
] }
oliphaunt-wasix-tools = { version = "=0.0.0", registry = "oliphaunt-local" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64", target_env = "gnu"))'.dependencies]
liboliphaunt-wasix-aot-x86_64-unknown-linux-gnu = { version = "=0.0.0", registry = "oliphaunt-local" }
oliphaunt-wasix-tools-aot-x86_64-unknown-linux-gnu = { version = "=0.0.0", registry = "oliphaunt-local" }
