[package]
name = "oliphaunt-example-tauri-wasix"
version = "0.0.0"
description = "Tauri todo app backed by oliphaunt-wasix and SQLx"
edition = "2021"
publish = false

[workspace]

[lib]
name = "oliphaunt_example_tauri_wasix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
oliphaunt-wasix = { version = "=0.1.0", features = [
  "tools",
  "extension-hstore",
  "extension-pg-trgm",
  "extension-unaccent",
] }
oliphaunt-wasix-tools = { version = "=0.1.0" }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64", target_env = "gnu"))'.dependencies]
liboliphaunt-wasix-aot-x86_64-unknown-linux-gnu = { version = "=0.1.0" }
oliphaunt-wasix-tools-aot-x86_64-unknown-linux-gnu = { version = "=0.1.0" }
