[package]
name = "oliphaunt-example-tauri"
version = "0.1.0"
description = "Tauri todo app backed by the Oliphaunt native Rust SDK"
edition = "2021"
publish = false

[workspace]

[lib]
name = "oliphaunt_example_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.oliphaunt]
runtime = "liboliphaunt-native"
runtime-version = "0.1.0"
extensions = ["hstore", "pg_trgm", "unaccent"]

[build-dependencies]
oliphaunt-build = { path = "../../../src/sdks/rust/crates/oliphaunt-build" }
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
oliphaunt = { path = "../../../src/sdks/rust" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
