[package]
name = "oliphaunt-example-tauri"
version = "0.0.0"
description = "Tauri todo app backed by the Oliphaunt native Rust SDK"
edition = "2021"
publish = false

[workspace]

[lib]
name = "oliphaunt_example_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.oliphaunt]
runtime = "liboliphaunt-native"
runtime-version = "0.1.0"
extensions = ["hstore", "pg_trgm", "unaccent"]

[build-dependencies]
oliphaunt-build = { version = "=0.1.0" }
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
oliphaunt = { version = "=0.1.0" }
oliphaunt-tools = { version = "=0.1.0" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64", target_env = "gnu"))'.dependencies]
liboliphaunt-native-linux-x64-gnu = { version = "=0.1.0" }
oliphaunt-broker-linux-x64-gnu = { version = "=0.1.0" }
oliphaunt-extension-hstore-linux-x64-gnu = { version = "=0.1.0" }
oliphaunt-extension-pg-trgm-linux-x64-gnu = { version = "=0.1.0" }
oliphaunt-extension-unaccent-linux-x64-gnu = { version = "=0.1.0" }
