[package]
name = "oliphaunt-perf"
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
license.workspace = true
publish = false

[features]
default = []
legacy-oliphaunt = ["dep:directories", "dep:oliphaunt-wasix"]

[dependencies]
anyhow = "1"
directories = { version = "6", optional = true }
futures-util = "0.3"
oliphaunt = { version = "0.1.0", path = "../../../src/sdks/rust" }
oliphaunt-wasix = { version = "0.1.0", path = "../../../src/bindings/wasix-rust/crates/oliphaunt-wasix", features = ["extensions"], optional = true }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "runtime-tokio",
] }
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-postgres = "0.7"
