[package]
name = "oliphaunt-broker-linux-x64-gnu"
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
description = "Cargo artifact crate for the linux-x64-gnu oliphaunt-broker helper binary."
readme = "README.md"
repository = "https://github.com/f0rr0/oliphaunt"
homepage = "https://oliphaunt.dev"
license = "MIT AND Apache-2.0 AND BSD-3-Clause AND CC-BY-3.0 AND ISC AND Unicode-3.0"
links = "oliphaunt_artifact_broker_linux_x64_gnu"
build = "build.rs"
include = ["Cargo.toml", "README.md", "build.rs", "src/**", "payload/**", "LICENSE", "THIRD_PARTY_NOTICES.md", "THIRD_PARTY_LICENSES/**"]

[lib]
path = "src/lib.rs"

[workspace]
