[package]
name = "oliphaunt-broker-macos-arm64"
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
description = "Cargo artifact crate for the macos-arm64 oliphaunt-broker helper binary."
readme = "README.md"
repository = "https://github.com/f0rr0/oliphaunt"
homepage = "https://oliphaunt.dev"
license = "MIT AND Apache-2.0 AND PostgreSQL"
links = "oliphaunt_artifact_broker_macos_arm64"
build = "build.rs"
include = ["Cargo.toml", "README.md", "build.rs", "src/**", "payload/**"]

[lib]
path = "src/lib.rs"

[workspace]
