[package]
name = "oliphaunt-broker-windows-x64-msvc"
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
description = "Cargo artifact crate for the windows-x64-msvc oliphaunt-broker helper binary."
readme = "README.md"
repository = "https://github.com/f0rr0/oliphaunt"
homepage = "https://oliphaunt.dev"
license = "MIT AND Apache-2.0 AND PostgreSQL"
links = "oliphaunt_artifact_broker_windows_x64_msvc"
build = "build.rs"
include = ["Cargo.toml", "README.md", "build.rs", "src/**", "payload/**"]

[lib]
path = "src/lib.rs"

[workspace]
