[package]
name = "oliphaunt-build"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Cargo build-script integration for staging Oliphaunt runtime artifacts."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
license = "MIT AND Apache-2.0 AND PostgreSQL"

[lib]
name = "oliphaunt_build"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
