[package]
name = "tauri-sqlx-vanilla"
version = "0.1.0"
description = "Vanilla Tauri v2 SQLx profiler for oliphaunt-wasix"
authors = ["oliphaunt-wasix contributors"]
edition = "2021"
publish = false

[workspace]

[lib]
name = "tauri_sqlx_vanilla_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
oliphaunt-wasix = { version = "=0.1.0", registry = "oliphaunt-local", features = [
  "extensions",
  "tools",
] }
oliphaunt-wasix-tools = { version = "=0.1.0", registry = "oliphaunt-local" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64", target_env = "gnu"))'.dependencies]
liboliphaunt-wasix-aot-x86_64-unknown-linux-gnu = { version = "=0.1.0", registry = "oliphaunt-local" }
oliphaunt-wasix-tools-aot-x86_64-unknown-linux-gnu = { version = "=0.1.0", registry = "oliphaunt-local" }
