[package]
name = "oliphaunt-tools"
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
description = "Target-selecting Cargo facade for Oliphaunt native pg_dump and psql artifacts."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
license = "MIT AND Apache-2.0 AND PostgreSQL"
links = "oliphaunt_artifact_oliphaunt_tools_relay"
build = "build.rs"

[lib]
path = "src/lib.rs"
